<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2sp"
    android:animateLayoutChanges="true"
    app:cardBackgroundColor="@color/colorDark"
    app:cardCornerRadius="4sp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_android" />

        <TextView
            android:id="@+id/publishedAtTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:padding="4sp"
            android:text="@string/publishedat"
            android:textColor="@color/colorTextLight"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:paddingTop="2sp"
            android:id="@+id/titleTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:gravity="center"
            android:padding="4sp"
            android:text="@string/title"
            android:textColor="@color/colorTextLight"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/authorTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleTv"
            android:gravity="center"
            android:padding="4sp"
            android:text="@string/author"
            android:textColor="@color/colorTextLight"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>